@@ -9,7 +9,7 @@ Gem::Specification.new do |s|
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Sergei Kozlov"]
-  s.date = %q{2010-12-15}
+  s.date = %q{2010-12-17}
   s.description = %q{A set of full-featured extendible Netzke components (such as FormPanel, GridPanel, Window, BorderLayoutPanel, etc) which can be used as building block for your RIA}
   s.email = %q{sergei@playcode.nl}
   s.extra_rdoc_files = [
@@ -67,6 +67,7 @@ Gem::Specification.new do |s|
     "lib/netzke/basepack/border_layout_panel.rb",
     "lib/netzke/basepack/form_panel.rb",
     "lib/netzke/basepack/form_panel/fields.rb",
+    "lib/netzke/basepack/form_panel/javascripts/comma_list_cbg.js",
     "lib/netzke/basepack/form_panel/javascripts/main.js",
     "lib/netzke/basepack/form_panel/javascripts/netzkefileupload.js",
     "lib/netzke/basepack/form_panel/services.rb",
