@@ -12,8 +12,10 @@ class BookForm < Netzke::Basepack::FormPanel
         {:name => :author__first_name, :setter => author_first_name_setter},
         :digitized,
         :exemplars,
-        {:name => :in_abundance, :getter => in_abundance_getter, :xtype => :displayfield}
+        {:name => :in_abundance, :getter => in_abundance_getter, :xtype => :displayfield},
+        {:name => :tags, :xtype => :commalistcbg, :options => %w(read cool recommend buy)}
       ]
     )
   end
+
 end
