@@ -1,3 +1,4 @@
 class Book < ActiveRecord::Base
   belongs_to :author
+
 end
