@@ -10,7 +10,7 @@
 #
 # It's strongly recommended to check this file into your version control system.
 
-ActiveRecord::Schema.define(:version => 20101127092414) do
+ActiveRecord::Schema.define(:version => 20101026190021) do
 
   create_table "authors", :force => true do |t|
     t.string   "first_name"
@@ -25,29 +25,10 @@ ActiveRecord::Schema.define(:version => 20101127092414) do
     t.integer  "exemplars"
     t.boolean  "digitized"
     t.text     "notes"
+    t.string   "tags"
     t.datetime "created_at"
     t.datetime "updated_at"
   end
-
-  create_table "localized_models", :force => true do |t|
-    t.string   "attr1"
-    t.integer  "attr2"
-    t.datetime "created_at"
-    t.datetime "updated_at"
-  end
-
-  create_table "netzke_component_states", :force => true do |t|
-    t.string   "component"
-    t.integer  "user_id"
-    t.integer  "role_id"
-    t.text     "value"
-    t.datetime "created_at"
-    t.datetime "updated_at"
-  end
-
-  add_index "netzke_component_states", ["component"], :name => "index_netzke_component_states_on_component"
-  add_index "netzke_component_states", ["role_id"], :name => "index_netzke_component_states_on_role_id"
-  add_index "netzke_component_states", ["user_id"], :name => "index_netzke_component_states_on_user_id"
 
   create_table "netzke_preferences", :force => true do |t|
     t.string   "key"
